fixed search field to clear after player is drafted, shifted display name away from logout

--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -20,6 +20,9 @@ html, body {
   background-position: center;*/
   background-color: #d3d3d3;
 }
+.navbar-text {
+  padding-right: 10%;
+}
 
 .nav-tabs>li>a {
   color: white;
